<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/baseline_ac_unit_24"
            android:title="@string/home" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_ac_unit_24"
            android:title="@string/settings" />

        <item
            android:id="@+id/share"
            android:icon="@drawable/baseline_ac_unit_24"
            android:title="@string/share" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/baseline_ac_unit_24"
            android:title="@string/about_us" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/baseline_exit_to_app_24"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>
