<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="12dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/itemName"
            android:text="@string/dinosaur_meat"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <TextView
            android:id="@+id/memberName"
            android:text="@string/for_luffy"
            android:textColor="#444444"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/itemPrice"
            android:text="@string/_19_99"
            android:textColor="#008000"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <CheckBox
            android:id="@+id/itemCheck"
            android:text="@string/purchased"
            android:checked="false"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>