<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deal_details"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:textColor="@color/blue_background" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/dealImageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/baseline_lightbulb_24"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/deal_image" />

                <TextView
                    android:id="@+id/dealNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deal_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/BorderBlue" />

                <TextView
                    android:id="@+id/dealPriceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_00"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/BorderBlue" />

                <TextView
                    android:id="@+id/dealUrlTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/https_www_example_com"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/dealDescriptionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/BorderBlue" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_gift_list"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:textColor="@color/blue_background" />

        <Spinner
            android:id="@+id/listSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/memberSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/addGiftButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_gift_to_member"
            android:backgroundTint="@color/BorderBlue"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>