<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    tools:context=".HomePageUIClasses.MemberManagment.MemberDataUploadFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/white_background"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_member"
                android:textAlignment="center"
                android:textColor="@color/christmas_blue"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/memberImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:importantForAccessibility="no"
                android:scaleType="fitXY"
                android:src="@drawable/baseline_account_box_24" />

            <EditText
                android:id="@+id/memberNameEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/borderblue"
                android:gravity="start|center_vertical"
                android:hint="@string/enter_member_name"
                android:padding="16dp"
                android:textColor="@color/BorderBlue" />

            <EditText
                android:id="@+id/memberRoleEditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/borderblue"
                android:gravity="start|center_vertical"
                android:hint="@string/enter_preferences"
                android:padding="16dp"
                android:textColor="@color/BorderBlue" />


            <Button
                android:id="@+id/saveMemberButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_blue"
                android:text="@string/save"
                android:textSize="18sp"
                app:cornerRadius="20dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>
