<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/christmas_blue"
    tools:context=".LoginUI.ForgotPasswordFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="@drawable/rounded_white_bg"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/christmas_blue"
                android:textAlignment="center"
                android:layout_marginBottom="24dp"/>

            <EditText
                android:id="@+id/forgot_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_your_registered_email"
                android:background="@drawable/borderblue"
                android:padding="8dp"
                android:drawableStart="@drawable/baseline_ac_unit_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="30dp"/>

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/send_reset_link"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:background="@drawable/rounded_blue"
                app:cornerRadius="20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
